--- a/src/app/admin/store-user/store-user.component.html
+++ b/src/app/admin/store-user/store-user.component.html
@@ -1,5 +1,5 @@
 
 <app-create [method]="method"
             [formSettings]="settings"
-            [createForm]="userForm">
+            [createForm]="form">
 </app-create>
