--- a/src/app/shared/crud/create/create.component.html
+++ b/src/app/shared/crud/create/create.component.html
@@ -1,10 +1,21 @@
 <div class="form-container">
     <form [formGroup]="createForm" (ngSubmit)="onSubmit()">
-        <mat-form-field *ngFor="let key of formKeys" hintLabel="Max 10 characters" appearance="fill">
-            <mat-label>{{key}}</mat-label>
-            <input matInput #hintControl formControlName="{{key}}" maxlength="10" placeholder="Enter a nickname">
-            <mat-hint align="end">{{hintControl.value?.length || 0}}/10</mat-hint>
-        </mat-form-field>
+        <span *ngFor="let key of formSettings" [ngSwitch]="key.type">
+            <mat-form-field *ngSwitchCase="'hintInput'" hintLabel="{{key.hintLabel}}" appearance="fill">
+                <mat-label>{{key.label}}</mat-label>
+                <input  matInput #hintControl 
+                        formControlName="{{key.name}}" 
+                        maxlength="{{key.maxChars}}" 
+                        placeholder="{{key.placeholder}}">
+                <mat-hint align="end">{{hintControl.value?.length || 0}}/10</mat-hint>
+            </mat-form-field>
+            <mat-form-field *ngSwitchCase="'simpleInput'" appearance="fill">
+                <mat-label>{{key.label}}</mat-label>
+                <input  matInput #hintControl 
+                        formControlName="{{key.name}}" 
+                        placeholder="{{key.placeholder}}">
+            </mat-form-field>
+        </span>
         <div>
             <button mat-button color="primary" type="submit" [disabled]="!createForm.valid">Submit</button>
         </div>
