--- a/src/app/admin/store-user/store-user.component.html
+++ b/src/app/admin/store-user/store-user.component.html
@@ -1,5 +1,4 @@
 
 <app-create [method]="method"
-            [formSettings]="settings"
-            [createForm]="form">
+            [formSettings]="settings">
 </app-create>
