untill backend delete user

--- a/src/app/admin/store-user/store-user.component.html
+++ b/src/app/admin/store-user/store-user.component.html
@@ -1,4 +1,2 @@
 
-<app-create [method]="method"
-            [formSettings]="settings">
-</app-create>
+<app-store [method]="method" [formSettings]="settings" [id]="id" [obj]="user"></app-store>
