collection tied with view

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,3 +1,5 @@
+<app-view [view]="settings" [model]="'User'"></app-view>
+ <!--
 <mat-nav-list #list>
 	<ng-container *ngFor="let o of objects">
         <a mat-list-item routerLink="/users/{{o.id}}" routerLinkActive="active">
@@ -7,5 +9,6 @@
         </a>
 	</ng-container>
 </mat-nav-list>
+ View -->
 
   
