--- a/src/app/admin/store-user/store-user.component.html
+++ b/src/app/admin/store-user/store-user.component.html
@@ -1,1 +1,1 @@
-<app-store [method]="method" [formSettings]="settings" [id]="id" [obj]="user"></app-store>
+<app-store [method]="method" [formSettings]="settings" [id]="id" [obj]="user" (obj$)="storedUser($event)"></app-store>
